# peon

./: .gitignore  README.md  agents.md  pyproject.toml  reference.txt  textual-results.xml
.scratch/: handover.md  peon-0.3.0-history.md  peon-0.3.0-spec.md  peon-0.3.1-spec.md  peon-vs-mini-swe-agent.md  project-history.md
.scratch/peon-0.2-host-neutral-coding-session/issues/: 04-add-metadata-only-performance-traces.md  05-expose-embedded-python-adapter.md  06-route-textual-turns-through-coding-session.md  07-route-prompt-toolkit-through-coding-session.md  08-centralize-host-selection.md  09-contract-duplicate-orchestration-and-verify-0.2.md
.scratch/peon-spec/: command-inventory.md  map.md  pi-parity-spec.md  session-and-tool-research.md  slash-command-reference-research.md  slash-command-spec.md  spec.md
.scratch/report-generation-harness/: map.md  spec.md
src/peon/: __init__.py  embedded.py
src/report_harness/: __init__.py  cli.py  errors.py  evidence.py  models.py  pipeline.py  providers.py  workbook.py
tests/: test_agent.py  test_ai.py  test_capability_limits_policies.py  test_cli.py  test_coding_session.py  test_command_catalog.py  test_config.py  test_controller_provider_settings.py  test_embedded.py  test_evidence.py  test_extensions.py  test_filesystem_tools.py  test_hosts.py  test_observability.py  test_packaging.py  test_peon_cli.py  test_pipeline.py  test_provider.py  test_resources.py  test_session_controller.py  test_sessions.py  test_textual_bash.py  test_textual_resources.py  test_textual_tui.py  test_tui.py  test_workbook.py
(+84 files in other folders)
