[project]
name = "peon"
version = "0.1.0"
description = "Minimal modular Python agent core"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0,<4",
    "textual>=0.70,<1",
]

[project.scripts]
peon = "peon.app:main"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peon"]
