[project]
name = "peon"
version = "0.3.0a0"
description = "Minimal modular Python agent core"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
tui = [
    "textual>=0.70,<1.0.0",
]
serve = [
    "textual>=0.70,<1.0.0",
]

[project.scripts]
peon = "peon.app:main"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peon"]
